backgroudn color, css headers, added social media list in let's collab section

--- a/index.html
+++ b/index.html
@@ -7,30 +7,63 @@
         <link rel="stylesheet" href="./assets/style.css">
     </head>
     <body>
-        <!-- Hero Jumbotron -->
-            <section class="hero" >
+        <!-- Hero Jumbotron Photo -->
+            <section class= "hero" >
             </section>
         <!-- Navigation Bar -->  
         <header>
         <nav>
             <h1>CURTIS VAN HONG, CPA</h1>
             <ul>
-                <li> <a href="my-work">Work </a> </li>
-                <li> <a href="current-project"> Current Project</a></li>
+                <li> <a href="portfolio">Portfolio </a> </li>
+                <li> <a href="about-me"> About Me</a></li>
                 <li> <a href="touch-base">Let's Collab</a> </li>
             </ul>
         </nav>
          </header>
-        <Section id="my-work">
-            <h2>MY WORK</h2>
-            <div></div>
-            <div></div>
-            <div</div>
+        <!-- about me section -->
+        <div class = "about-me">
+            <h2 id="about-me">About Me </h2>
+        </div>
+
+        <!-- portfolio section -->
+        <h2 id="portfolio">Portfolio</h2>
+
+        <div class = "portfolio-containers">
+            <div>
+                <p>Content Creation and Personal Blog at Nonchalant Garage</p>
+                <a href="https://www.nonchalantgarage.com/" target="_blank"> <img src="./assets/images/NonchalantGarage.png" alt="Personal Brand"> </a>
+            </div>
+            <div>
+                <p>UCB HTML/CSS Assigment</p>
+                <img href="" src="" alt="">
+            </div>
+            <div>
+                <p>Morgan Schutte, MFT</p>
+                <img href="" src="" alt="">
+            </div>
+            <div>
+                <p>Rock Paper Scissors</p>
+                <img href="" src="" alt="">
+            </div>
+        </div>
+
+        <!-- contact me -->
+        <div>
+            <H2>Let's collab</H2>
+            <ul>
+                <li><a href="mailto:hong.curtis@gmail.com">Email</a> </li>
+                <li><a href="https://www.instagram.com/nonchalantgarage/">Instagram</a> </li>
+                <li><a href="https://www.strava.com/athletes/117506">Strava</a> </li>
+                <li><a href="https://www.youtube.com/channel/UCoSDn9vfHFSYRJ-SwgFnL-A">Youtube</a> </li>
+            </ul>
+
+        </div>
 
 
-        </Section>
+        <!-- footer section  -->
         <footer>
-            <H2 id="touch-base">OUR BASES WILL TOUCH </H2>
+            
         </footer>
     </body>
 
