added css to social media list and href on nav bar

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <nav>
             <h1>CURTIS VAN HONG, CPA</h1>
             <ul>
-                <li> <a href="portfolio">Portfolio </a> </li>
-                <li> <a href="about-me"> About Me</a></li>
-                <li> <a href="touch-base">Let's Collab</a> </li>
+                <li> <a href="#portfolio">Portfolio </a> </li>
+                <li> <a href="#about-me"> About Me</a></li>
+                <li> <a href="#contact-me">Let's Collab</a> </li>
             </ul>
         </nav>
          </header>
@@ -49,8 +49,8 @@
         </div>
 
         <!-- contact me -->
-        <div>
-            <H2>Let's collab</H2>
+        <div class="contact-me">
+            <H2 id="contact-me">Let's collab</H2>
             <ul>
                 <li><a href="mailto:hong.curtis@gmail.com">Email</a> </li>
                 <li><a href="https://www.instagram.com/nonchalantgarage/">Instagram</a> </li>
