add run buddy image

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                 <a href="https://www.nonchalantgarage.com/" target="_blank"> <img src="./assets/images/NonchalantGarage.png" alt="Personal Brand"> </a>
             </div>
             <div>
-                <p>UCB HTML/CSS Assigment</p>
-                <img href="" src="" alt="">
+                <p>UCB HTML/CSS Run Buddy Assignment</p>
+                <a href="https://nonchalantgarage.github.io/run-buddy/"> <img src="./assets/images/Run Buddy.png" alt="Run Buddy Screnshot"> </a>
             </div>
             <div>
                 <p>Morgan Schutte, MFT</p>
