--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
         <!-- footer section  -->
         <footer>
-            
+            Developed by Curtis Hong
         </footer>   
     </body>
 
