added group project to personal portfolio

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                 <a class ="image-hover" href="#"> <img src="./assets/images/morgan-schutte MFT.jpg" alt="Morgan Schutte, MFT Website"> </a>
             </div>
             <div>
-                <p>Rock Paper Scissors Application (Placeholder)</p>
-                <a class ="image-hover" href="#"> <img src="./assets/images/rock-paper-scissors.jpg" alt="Rock Papaer Scissors Application"> </a>
+                <p>Dinner For You (Group Project)</p>
+                <a class ="image-hover" href="https://ddoherty6.github.io/dinner-for-you/"> <img src="./assets/images/Dinner For You.jpg" alt="Dinner For You Application"> </a>
             </div>
         </section>
  
