update card to include group project, lookmeup

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                 <a class ="image-hover" href="https://nonchalantgarage.github.io/run-buddy/ " target="_blank"> <img src="./assets/images/Run Buddy.png" alt="Run Buddy Screnshot"> </a>
             </div>
             <div>
-                <p>Morgan Schutte, MFT, Web Development and Design (Placeholder)</p>
-                <a class ="image-hover" href="#"> <img src="./assets/images/morgan-schutte MFT.jpg" alt="Morgan Schutte, MFT Website"> </a>
+                <p>Look Me Up (Group Project</p>
+                <a class ="image-hover" href="https://look-meup.herokuapp.com/"> <img src="./assets/images/lookmeup.png" alt="Look Me Up"> </a>
             </div>
             <div>
                 <p>Dinner For You (Group Project)</p>
