update card to include group project, lookmeup

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <a class ="image-hover" href="https://nonchalantgarage.github.io/run-buddy/ " target="_blank"> <img src="./assets/images/Run Buddy.png" alt="Run Buddy Screnshot"> </a>
             </div>
             <div>
-                <p>Look Me Up (Group Project</p>
+                <p>Look Me Up (Group Project)</p>
                 <a class ="image-hover" href="https://look-meup.herokuapp.com/"> <img src="./assets/images/lookmeup.png" alt="Look Me Up"> </a>
             </div>
             <div>
