update with my latest class project

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         <section class = "portfolio-containers">
             
             <div>
-                <p>UC Berkeley Advanced HTML/CSS Assignment</p>
-                <a class ="image-hover" href="https://nonchalantgarage.github.io/run-buddy/ " target="_blank"> <img src="./assets/images/Run Buddy.png" alt="Run Buddy Screnshot"> </a>
+                <p>0nly Pets (Group Project)</p>
+                <a class ="image-hover" href="https://alex-d-marten-0nlypets.herokuapp.com/Login" target="_blank"> <img src="./assets/images/0nlypets.png" alt="OnlyPets Screenshot"> </a>
             </div>
             <div>
                 <p>Look Me Up (Group Project)</p>
